[package]
name = "d3d12"
version = "0.7.0"
authors = [
	"gfx-rs developers",
]
description = "Low level D3D12 API wrapper"
repository = "https://github.com/gfx-rs/d3d12-rs"
keywords = ["windows", "graphics"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/d3d12"
categories = ["api-bindings", "graphics", "memory-management", "os::windows-apis"]
edition = "2018"

[features]
implicit-link = []

[dependencies]
bitflags = "2"
# libloading 0.8 switches from `winapi` to `windows-sys`; permit either
libloading = { version = ">=0.7,<0.9", optional = true }
windows = { version = "0.48.0", features = [
	"Win32_Foundation",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D12",
	"Win32_Graphics_Direct3D_Fxc",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Security",
	"Win32_System_Threading",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
